<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context="com.eternitywall.regtest.ui.eternitywall.PhoneActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/phone_verification"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Spinner android:id="@+id/phone_cc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:layout_marginBottom="16dp"
            android:spinnerMode="dialog"/>


        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="phone"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="44dp"
            android:digits="0123456789"  />

    </LinearLayout>

    <CheckBox
        android:id="@+id/cbTerms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_verification_terms_of_service" />

    <TextView
        android:id="@+id/tvTerms"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/phone_verification_link_terms_of_service" />

    <Button
        android:id="@+id/btnPhoneVerify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/verify" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btnPhoneSkip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/transparent"
        android:text="@string/phone_skip"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="114dp" />

</LinearLayout>
