<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context="com.eternitywall.regtest.ui.PhoneActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/insert_the_pincode_received_from_sms_to_verify_your_phone" />

    <EditText
        android:id="@+id/etPin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="PIN CODE"
        android:inputType="phone"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="44dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPhoneSkip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/phone_back"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="114dp" />

        <Button
            android:id="@+id/btnPhoneConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/confirm"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="114dp" />
    </LinearLayout>

</LinearLayout>
